--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf www/* && webpack -p",
-    "devserver": "webpack-dev-server --port 9100 --progress --colors"
+    "dev": "webpack-dev-server --port 9100 --progress --colors"
   },
   "repository": {
     "type": "git",
